--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,7 @@ test:
 #
 production:
   <<: *default
-  database: shoplify_production
-  username: <%= ENV['SHOPLIFY_DATABASE_USERNAME'] %>
-  password: <%= ENV['SHOPLIFY_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_URL'] %>
+  # username: <%= ENV['SHOPLIFY_DATABASE_USERNAME'] %>
+  # password: <%= ENV['SHOPLIFY_DATABASE_PASSWORD'] %>
   # url: <%= ENV['DATABASE_URL'] %>
